tests: refactor for new requirements

--- a/tests/fixtures/local_page.html
+++ b/tests/fixtures/local_page.html
@@ -6,8 +6,8 @@
    Курсы по программированию Хекслет
   </title>
   <link href="https://cdn2.hexlet.io/assets/menu.css" media="all" rel="stylesheet"/>
-  <link href="/assets/application.css" media="all" rel="stylesheet"/>
-  <link href="/courses" rel="canonical"/>
+  <link href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css" media="all" rel="stylesheet"/>
+  <link href="ru-hexlet-io-courses_files/ru-hexlet-io-courses.html" rel="canonical"/>
  </head>
  <body>
   <img alt="Иконка профессии Python-программист" src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png"/>
@@ -18,7 +18,7 @@
   </h3>
   <script src="https://js.stripe.com/v3/">
   </script>
-  <script src="https://ru.hexlet.io/packs/js/runtime.js">
+  <script src="ru-hexlet-io-courses_files/ru-hexlet-io-packs-js-runtime.js">
   </script>
  </body>
 </html>
